// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentBanner should correctly render for ltr service 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  max-width: 36.25rem;
  margin: 0 auto;
}

.emotion-2::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-2 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #AEAEB5;
  text-decoration-color: #AEAEB5;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-6 li+li {
  margin-top: 0.75rem;
}

@media (min-width:25rem) {
  .emotion-6 li+li {
    float: right;
  }
}

.emotion-8 {
  text-align: center;
  display: inline-block;
  width: 17.3125rem;
}

.emotion-8 button {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: none;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 button {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 button {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 button:focus {
  outline: none;
  box-shadow: 0px 0px 1px 3px #68A1F8;
}

.emotion-8 button:focus,
.emotion-8 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-8 a {
  color: #F6A21D;
  margin-top: 0.75rem;
}

.emotion-8 a:focus {
  outline: none;
  box-shadow: 0px 0px 1px 3px #68A1F8;
}

.emotion-8 a:focus,
.emotion-8 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    width: 100%;
    display: block;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
    id="banner-id"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="ltr"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p>
        Hello
      </p>
      <ul
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        <li
          class="emotion-8 emotion-9"
          dir="ltr"
        >
          <button
            type="button"
          >
            Accept
          </button>
        </li>
        <li
          class="emotion-8 emotion-9"
          dir="ltr"
        >
          <a
            href="https://foobar.com"
          >
            Reject
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBanner should correctly render for rtl service 1`] = `
.emotion-0 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  max-width: 36.25rem;
  margin: 0 auto;
}

.emotion-2::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-2 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #AEAEB5;
  text-decoration-color: #AEAEB5;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.625rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-6 li+li {
  margin-top: 0.75rem;
}

@media (min-width:25rem) {
  .emotion-6 li+li {
    float: left;
  }
}

.emotion-8 {
  text-align: center;
  display: inline-block;
  width: 17.3125rem;
}

.emotion-8 button {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  width: 100%;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: none;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 button {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 button {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-8 button:focus {
  outline: none;
  box-shadow: 0px 0px 1px 3px #68A1F8;
}

.emotion-8 button:focus,
.emotion-8 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-8 a {
  color: #F6A21D;
  margin-top: 0.75rem;
}

.emotion-8 a:focus {
  outline: none;
  box-shadow: 0px 0px 1px 3px #68A1F8;
}

.emotion-8 a:focus,
.emotion-8 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    width: 100%;
    display: block;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="rtl"
    id="banner-id"
  >
    <div
      class="emotion-2 emotion-3"
      dir="rtl"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="rtl"
      >
        عنوان
      </h2>
      <p>
        مرحبا
      </p>
      <ul
        class="emotion-6 emotion-7"
        dir="rtl"
      >
        <li
          class="emotion-8 emotion-9"
          dir="rtl"
        >
          <button
            type="button"
          >
            قبول
          </button>
        </li>
        <li
          class="emotion-8 emotion-9"
          dir="rtl"
        >
          <a
            href="https://foobar.com"
          >
            رفض
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBanner with hidden attribute on wrapper should correctly render 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  padding: 1rem 0.5rem;
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  max-width: 36.25rem;
  margin: 0 auto;
}

.emotion-2::after {
  content: '\\0020';
  display: block;
  height: 0;
  clear: both;
  overflow: hidden;
  visibility: hidden;
}

.emotion-2 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #AEAEB5;
  text-decoration-color: #AEAEB5;
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding: 0;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-6 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-6 li+li {
  margin-top: 0.75rem;
}

@media (min-width:25rem) {
  .emotion-6 li+li {
    float: right;
  }
}

.emotion-8 {
  text-align: center;
  display: inline-block;
  width: 17.3125rem;
}

.emotion-8 button {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: none;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  margin: 0;
  cursor: pointer;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-8 button {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-8 button {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 button:focus {
  outline: none;
  box-shadow: 0px 0px 1px 3px #68A1F8;
}

.emotion-8 button:focus,
.emotion-8 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-8 a {
  color: #F6A21D;
  margin-top: 0.75rem;
}

.emotion-8 a:focus {
  outline: none;
  box-shadow: 0px 0px 1px 3px #68A1F8;
}

.emotion-8 a:focus,
.emotion-8 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    width: 100%;
    display: block;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
    hidden=""
    id="banner-id"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="ltr"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p>
        Hello
      </p>
      <ul
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        <li
          class="emotion-8 emotion-9"
          dir="ltr"
        >
          <button
            type="button"
          >
            Accept
          </button>
        </li>
        <li
          class="emotion-8 emotion-9"
          dir="ltr"
        >
          <a
            href="https://foobar.com"
          >
            Reject
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ConsentBannerText should correctly render 1`] = `
.emotion-0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #BEBEBE;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-0 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-0 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-0 a {
  color: #F6A21D;
}

.emotion-0 a:focus {
  outline: none;
  box-shadow: 0px 0px 1px 3px #68A1F8;
}

.emotion-0 a:focus,
.emotion-0 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

<div>
  <p
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    We have made some important changes to our Privacy and Cookies Policy and we want you to know what this means for you and your data.
  </p>
</div>
`;
